# RV32I-Interpreter

./: .clangd  .gitignore  CMakeLists.txt  CheckTraces.sh  Makefile  README.md  conanfile.txt  fib_trace.txt  out  play  x86_64
Anytype.20241026.204722.24/: rv32i-interpreter.md
include/: CMakeLists.txt  cpu.hpp  io.hpp  rv32i.hpp  trace.hpp
rv32i_code_examples/: test  test.s  test_objdump.s
rv32i_code_examples/fib/: fib.c  fib_10.s  fib_hex  fib_objdump  fib_out  fib_out_10
rv32i_code_examples/tests/: test1  test1.s  test1_objdump.hex  test2  test2.s  test2_objdump.hex  test3  test3.s  test3_objdump.hex  test4  test4.s  test4_objdump.hex
src/: CMakeLists.txt  decode.cpp  execute.cpp  instr.cpp  io.cpp  main.cpp  translate.cpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  fib_300  instr_test.cpp  main.cpp  test.hpp  test_decode.cpp  test_execute.cpp  test_translate.cpp
test/data/: HelloWorld  HelloWorld.s  fib  fib.s  fib_100k  fib_100k.s  fib_1k  fib_1k.s  test1  test1.s  test1_objdump.s  test2  test2.s  test3  test3.s  test5  test5.s  test6  test6.s  test7  test7.s  test8  test8.s
